<resources>
    <string name="welcome">"Welcome !"</string>
    <string name="login_text_string">Enter mobile number, OTP will be sent to this number</string>
    <string name="terms"><u> Please agree to the terms and conditions!</u></string>
    <string name="login">Login</string>
    <string name="login_"> Submit/Include</string>
    <string name="entno">"Entered mobile number"</string>
    <string name="edit"> Change number</string>
    <string name="otp_text"> The OTP will now be sent</string>
    <string name="serach_hint">speak here to search</string>
    <string name="app_name">GarZoo</string>
    <string name="app_name_marathi">गरजू</string>
    <string name="copyright">Garzoo Technologies and Solution Private Limited</string>
    <string name="no_internet_msg">No internet connection!</string>
    <string name="err_login">"Failed, please try again later !!"</string>
    <string name="otp">OTP</string>
    <string name="resend">Resend OTP</string>
    <string name="welcomeTo">Welcome to the GarZoo !! Register here</string>
    <string name="app_info_1">This whole application runs on your voice</string>
    <string name="app_info_2">Touch the mic in the box and register</string>
    <string name="app_info_3">Connecting Needy People</string>
    <string name="buy"> Buy</string>
    <string name="sell">Sell</string>
    <string name="rent">Rent</string>
    <string name="employement">Employment</string>
    <string name="buisness">Business</string>
    <string name="promotion">Entertainment/ \nAdvertising</string>
    <string name="download">Download</string>
    <string name="like">Like</string>
    <string name="chat">Chat</string>
    <string name="share">Share</string>
    <string name="block">Block</string>
    <string name="Report">Report</string>
    <string name="edit_"> Edit</string>
    <string name="rp1">Fraudulent / offensive content</string>
    <string name="rp2">Duplicate post</string>
    <string name="rp3">The item has already been sold</string>
    <string name="rp4">Pictures and objects are different (unrelated)</string>
    <string name="noti_contact">Contact</string>
    <string name="noti_chat">Chat</string>
    <string name="noti_msg">has sent you a message</string>
    <string name="MyListings">My list</string>
    <string name="Interested">My favourite</string>
    <string name="ContactUs">Contact</string>
    <string name="feedback">Feedback  and changes</string>
    <string name="blocklist">Blocked users list</string>
    <string name="out">Sign out</string>
    <string name="hoy">Okay</string>
    <string name="ho">Yes</string>
    <string name="no">No</string>
    <string name="dar">Rate</string>
    <string name="lang">Select the language of the application</string>
    <string name="update">Update application</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="jahirat">Advertising</string>
    <string name="charcha">Entertainment</string>
    <string name="charcha__">Entertainment/Advertising</string>
    <string name="title">The name of the item</string>
    <string name="description_">Item Information</string>
    <string name="price_">Price</string>
    <string name="photos"> Photo</string>
    <string name="videos"> 1 minute video</string>
    <string name="category">Select the type</string>
    <string name="write_hint">Speak here.....</string>
    <string name="rentrequiremnt">(To rent)</string>
    <string name="rentregist">(Rental)</string>
    <string name="roj_pahije">(Want a job/employment)</string>
    <string name="kam_pahije">(Employees/workers wanted)</string>
    <string name="jahirat_">(Advertising)</string>
    <string name="charcha_">(Entertainment)</string>
    <string name="title_charch">Name</string>
    <string name="description_charch">More info</string>
    <string name="sell_">(For sale)</string>
    <string name="video_uploading">Uploading video</string>
    <string name="distance">Km.</string>
    <string name="rbHome">Home</string>
    <string name="rbCurrent">Current</string>
    <string name="rbSelect">Select</string>
    <string name="charch_vishay">Topic of Entertainment</string>
    <string name="charch_varnan">Description of the Entertainment</string>
    <string name="jahirat_vishay">Advertising topic</string>
    <string name="jahirat_varnan">Advertisement description</string>
    <string name="kala">Art skills</string>
    <string name="kala_hint">(Farmer, driver, plumber, doctor, teacher, waiter etc.)</string>
    <string name="empdescription_">Information about your work</string>
    <string name="emp_description_">More info</string>
    <string name="bus">Please register your business</string>
    <string name="bus_type">The nature of the business</string>
    <string name="bus_hint">(Health, hotel, sewing, shop..etc)</string>
    <string name="bus_name">Business name</string>
    <string name="bus_description">Business information</string>
    <string name="discussion">Please post your videos here for Entertainment</string>
    <string name="ads">Please register your Advertisement here</string>
    <string name="empprice_">Salary</string>
    <string name="renew">Renew</string>
    <string name="delete">Delete</string>
    <string name="select_location">Select a location</string>
    <string name="select_pv">Select Photos and videos</string>
    <string name="mobile_show">Show my mobile number</string>
    <string name="mobile_dont_show">Dont show my mobile number</string>
    <string name="mobile_not_available">Mobile number not available</string>
    <string name="available">Available</string>
    <string name="notavailable">Not available</string>
    <string name="advance_search_tal">City/Village</string>
    <string name="advance_search_city">Area/premises</string>
    <string name="Submit">Submit/Include </string>
    <string name="cancle">Cancel</string>
    <string name="path">Check the location and path of the business</string>
    <string name="regestration">Please register your item here (Rental)</string>
    <string name="regestration_one">(Rental) \nPlease register your item here </string>
    <string name="btnRequirement_">Please register your item here (To Rent) </string>
    <string name="btnRequirement">(To Rent)\nPlease register your item here</string>
    <string name="rojgar_reg">Please register your needs here (employment)</string>
    <string name="add_sell">Please register your item here (for sale)</string>
    <string name="image_selection">You can only upload up to 10 pictures.</string>
    <string name="image_error">You can only upload 10 pictures and 1 video.</string>
    <string name="delete_post">Are you sure you want to delete this post?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="help_text">Hello! What can I do to help you?</string>
    <string name="err_phone">Please enter your 10 digit mobile number.</string>
    <string name="err_otp">Please enter your OTP.</string>
    <string name="err_title">Please enter an item name.</string>
    <string name="err_description">Please enter item details.</string>
    <string name="err_price">Please write the price of the item.</string>
    <string name="err_category">Please select a type.</string>
    <string name="err_address">Please add your address.</string>
    <string name="err_emp_title">Please judge your art skills.</string>
    <string name="err_emp_descr">Please write information about your work.</string>
    <string name="err_busi_type">Please write the nature of your business.</string>
    <string name="err_busi_title">Please enter your business name.</string>
    <string name="err_busi_descr">Please enter your business information.</string>
    <string name="err_charch_title">Please write down the topic of your Entertainment.</string>
    <string name="err_charch_descr">Please write a description of your Entertainment.</string>
    <string name="err_adv_title">Please enter the name of your advertisement.</string>
    <string name="err_adv_descr">Please enter a description of your advertisement.</string>
    <string name="err_limit">You have exceeded the 1000 word limit.</string>
    <string name="err_nodata">No data found, please register your item.</string>
    <string name="err_nodata_notify">No suggestions yet.</string>
    <string name="err_noAdd">Address not provided.</string>
    <string name="bhadeprice_">Rent/Rate</string>
    <string name="empRequirement">(Employee/Worker Required)\n Register here for employment</string>
    <string name="empregister">(Want a job/employment)\n Register here for employment</string>
    <string name="empRequirement_">Register here for employment(Employee/Worker Required)</string>
    <string name="empregister_">Register here for employment (Want a job / employment)</string>
    <string name="icon_desc">Ad icon</string>
    <string name="image_desc">Ad image</string>
    <string name="sponsored">Sponsored</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rphone">Mobile No.</string>
    <string name="rfname">First Name</string>
    <string name="rlname">Last name</string>
    <string name="rgender">Gender</string>
    <string name="rage">Age</string>
    <string name="raddress">Address</string>
    <string name="rstate">State</string>
    <string name="rcity">District</string>
    <string name="rtaluka">Taluka</string>
    <string name="rgav">City / Village / Areaर</string>
    <string name="Female">Female</string>
    <string name="male">Male</string>
    <string name="namee">Name</string>
    <string name="email">Email</string>
    <string name="enquiry">Enquiry</string>
    <string name="enquiry_msg">Message/Query</string>
    <string name="sucess">"Your response has been recorded! Thank you"</string>
    <string name="unblock">Unblock</string>
    <string name="notnow">Not now</string>
    <string name="morer">More Result</string>
    <string name="lnPop1">See More Posts From Garzoo</string>
    <string name="lnPop2">More ways to communicate. More post related to various things. Only on the app.</string>
    <string name="english">English</string>
    <string name="marathi">मराठी</string>
    <string name="hindi">हिंदी</string>
    <string name="takevideo">Take Video</string>
    <string name="takephoto">Take Photo</string>
    <string name="choosegallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="title1">Title</string>
    <string name="description1">Description</string>
    <string name="price1">Price</string>
    <string name="emp_title">Skillset</string>
    <string name="emp_description">More info</string>
    <string name="emp_price">Salary</string>
    <string name="busi_title">Name</string>
    <string name="busi_type">Nature </string>
    <string name="busi_description">Information</string>
    <string name="jahirat_title">Ad topics</string>
    <string name="jahirat_des">Ad description</string>
    <string name="charcha_title">Topic</string>
    <string name="charcha_des">Description</string>
    <string name="block_sucess_response">You have successfully blocked this person</string>
    <string name="block_fail_response">Failed, please try again</string>
    <string name="Failed">Failed</string>
    <string name="Success">Success</string>
    <string name="failed_msg">Failed, please try again</string>
    <string name="sucess_msg">Sucessfully uploaded</string>
    <string name="contact_error">कृपया चौकशी संदेश लिहा</string>
</resources>